# dopynion

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
dopynion/: __init__.py  __main__.py  cards.py  constants.py  data_model.py  days.py  exceptions.py  game.py  player.py  record.py
tests/: conftest.py  test_card.py  test_game.py  test_player.py
