[project]
name = "dopynion"
version = "0.1.0"
description = "Dominion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
target-version = "py310"
output-format = "concise"
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = ["CPY001", "D1", "D203", "D212", "T201"]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]
