[project]
name = "dopynion"
version = "0.9.2"
description = "Dopynion"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic", "tzdata"]

[tool.coverage.run]
omit = ["dopynion/__main__.py"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]

[tool.mypy]
plugins = ['pydantic.mypy']

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-vvv --cov=dopynion --cov-branch --cov-report=term --cov-report html" # "-n auto" for pytest-xdist, but slow startup
log_cli = false
log_cli_level = "DEBUG"

[tool.ruff]
target-version = "py312"
output-format = "concise"
fix = true

[tool.ruff.lint]
preview = true
select = ["ALL"]
ignore = [
    "COM812",  # ruff recommends to disable it while using ruff format
    "CPY001",
    "D1",
    "D203",
    "D212",
    "FIX002",
    "T201",
    "TD002",
    "TD003",
    "TD004",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    "S101",    # asserts allowed in tests...
    "ARG",     # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",     # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
    "INP001",  #  Add an `__init__.py`
]

[tool.ruff.lint.pylint]
max-public-methods = 30

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.setuptools]
packages = ["dopynion"]

[tool.setuptools.package-data]
"dopynion" = ["py.typed"]

[tool.uv]
dev-dependencies = [
    "pytest-cov>=5.0.0",
    "pytest>=8.3.3",
    "pytest-xdist",
    "ruff>=0.6.8",
    "mypy",
]
